kubernetes-networks/web-svc-lb.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: web-svc-lb 
spec: 
  selector: 
    app: web 
  type: LoadBalancer 
  ports: 
    - protocol: TCP 
      port: 80 
      targetPort: 8000
